--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Jason Wei"
 title_separator          : "-"
 name                     : &name "Jason Wei"
 description              : &description "Student at Dartmouth College"
-url                      : https://jasonwengwei.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jasonwei20.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "jasonwengwei.github.io"
+repository               : "jasonwei20.github.io"
 teaser                   : "jason.jpg" # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -92,7 +92,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "jasonwengwei"
+  github           : "jasonwei20"
   google_plus      :
   keybase          :
   instagram        :
