--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,11 @@ analytics:
 author:
   name             : "Jason Wei"
   avatar           : "me.jpg"
-  bio              : "Student at Dartmouth College"
+  bio              : "jason.20@dartmouth.edu"
   location         : 
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=wA5TK_0AAAAJ&hl=en"
-  email            : "jason.weng.wei@gmail.com"
+  email            :
   uri              :
   bitbucket        :
   codepen          :
