--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Jason Wei"
   avatar           : "me.jpg"
-  bio              : "Dartmouth College"
+  bio              : 
   textemail        : "jason.20@dartmouth.edu"
   location         : 
   employer         : 
