--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   name             : "Jason Wei"
   avatar           : "me.jpg"
   bio              : 
-  textemail        : "jason.20@dartmouth.edu"
+  textemail        : "jason.weng.wei@gmail.com"
   location         : 
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?user=wA5TK_0AAAAJ&hl=en"
