--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jason Wei"
+title                    : ""
 title_separator          : "-"
 name                     : &name "Jason Wei"
 description              : &description "Student at Dartmouth College"
