--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 locale                   : "en-US"
 title                    : ""
-title_separator          : "-"
+title_separator          : ""
 name                     : &name "Jason Wei"
 description              : &description "Student at Dartmouth College"
 url                      : https://jasonwei20.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
