--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,8 @@ author:
   textemail        : #"jason.weng.wei@gmail.com"
   location         : 
   employer         : 
-  googlescholar    : #"https://scholar.google.com/citations?user=wA5TK_0AAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=wA5TK_0AAAAJ&hl=en"
+  personal         : "yes"
   email            :
   uri              :
   bitbucket        :
