--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : #"Jason Wei"
-  avatar           : "me.jpg"
+  avatar           : "antelope_canyon.jpg"
   bio              : 
   textemail        : #"jason.weng.wei@gmail.com"
   location         : 
