--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : #"Jason Wei"
-  avatar           : "taverna.jpeg"
+  avatar           : "IMG_9099.png"
   bio              : 
   textemail        : #"jason.weng.wei@gmail.com"
   location         : 
